tests/NormalTests/paczka1/fuzzy1/64201745.err
Error in line 17: DIEJN0f S88 461
Error in line 13: w8Mj6 A71 40,7
Error in line 19: w8Mj6 S934 44,3
Error in line 20: hJsXI4N0YHD S88 22,8
Error in line 23: hJsXI4N0YHD S934 100,0
Error in line 34: ezBU73aAr S13 28,8
